# Fortran-Torch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  TESTING.md
docs/: INTEGRATION_FV3.md  INTEGRATION_MPAS.md  INTEGRATION_WRF.md  README.md  WEATHER_MODEL_INTEGRATION.md
examples/fortran/: CMakeLists.txt  simple_example.f90  weather_model_example.f90
examples/python/: README.md  simple_model.py  weather_model.py
include/: fortran_torch.h
scripts/: build.sh  download_libtorch.sh  run_tests.sh  validate.sh
src/cpp/: fortran_torch.cpp
src/fortran/: ftorch.f90
tests/: CMakeLists.txt  README.md
tests/fortran/: test_basic.f90  test_inference.f90
tests/python/: create_test_model.py
